--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ secrets = "1.2.0"
 tokio = { version = "1.36.0", features = ["full"] }
 tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
 tracing = "0.1.40"
+tokio-stream = { version = "0.1.14", features = ["full"] }
