--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ tokio = { version = "1.36.0", features = ["full"] }
 tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
 tracing = "0.1.40"
 tokio-stream = { version = "0.1.14", features = ["full"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+refinement = "0.5.0"
+serde_yaml = "0.9.32"
